<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dgc.dm</groupId>
    <artifactId>decision-manager</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <modules>
        <module>dgc-core</module>
        <module>dgc-web</module>
    </modules>

    <name>Decision Manager</name>
    <url>http://localhost:8080/dgc-web/</url>

    <dependencies>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javassist.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${sl4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${sl4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>${sl4j-api.version}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${maven-war-plugin.version}</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>${javaee-endorsed-api.version}</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
                <executions>
                    <execution>
                        <id>auto-clean</id>
                        <phase>install</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <configuration>
                            <filesets>
                                <fileset>
                                    <directory>tomcat_home/webapps/${project.artifactId}</directory>
                                </fileset>
                            </filesets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <properties>
        <tomcat_home>${env.CATALINA_HOME}</tomcat_home>
        <java.version>1.8</java.version>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <javaee-endorsed-api.version>7.0</javaee-endorsed-api.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>2.6</maven-dependency-plugin.version>
        <maven-war-plugin.version>3.2.3</maven-war-plugin.version>
        <maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>

        <!-- Core dependencies -->
        <jasypt.version>1.9.3</jasypt.version>
        <spring.version>5.2.3.RELEASE</spring.version>
        <spring-data-jpa.version>2.2.4.RELEASE</spring-data-jpa.version>
        <javax.persistence-api.version>2.2</javax.persistence-api.version>
        <cglib.version>2.2.2</cglib.version>
        <commons-fileupload.version>1.4</commons-fileupload.version>
        <poi.version>4.1.1</poi.version>
        <hibernate.version>6.1.2.Final</hibernate.version>
        <hibernate-core.version>5.4.12.Final</hibernate-core.version>
        <javassist.version>3.26.0-GA</javassist.version>
        <h2database.version>1.4.200</h2database.version>
        <sqlite-jdbc.version>3.30.1</sqlite-jdbc.version>
        <sqlite-dialect.version>0.1.0</sqlite-dialect.version>
        <google-collections>1.0</google-collections>
        <modelmapper.version>2.3.6</modelmapper.version>
        <lombok.version>1.18.12</lombok.version>
        <logback-classic.version>1.3.0-alpha5</logback-classic.version>
        <sl4j-api.version>2.0.0-alpha1</sl4j-api.version>
        <log4j.version>1.2.17</log4j.version>
        <commons-text.version>1.8</commons-text.version>
        <commons-io.version>2.6</commons-io.version>

        <!-- email dependencies -->
        <javax.mail.version>1.4.7</javax.mail.version>
        <javax.mail-api.version>1.5.5</javax.mail-api.version>

        <!-- Web dependencies -->
        <servlet-api.version>4.0.1</servlet-api.version>
        <jsp-api.version>2.1</jsp-api.version>
        <thymeleaf-spring5.version>3.0.9.RELEASE</thymeleaf-spring5.version>
        <webjars-locator.version>0.39</webjars-locator.version>
        <webjars-taglib.version>0.3</webjars-taglib.version>
        <bootstrap.version>4.4.1-1</bootstrap.version>
        <jquery.version>3.4.0</jquery.version>
        <popper.version>1.14.3</popper.version>
        <datatables.version>1.10.20</datatables.version>
        <datatables-bootstrap.version>2-20120202-2</datatables-bootstrap.version>
        <datatables-buttons.version>1.6.1</datatables-buttons.version>
        <jszip.version>2.6.1</jszip.version>
        <pdfmake.version>0.1.36</pdfmake.version>
        <bootstrap4-toggle.version>3.6.0</bootstrap4-toggle.version>

        <!-- BPMN dependencies's version -->
        <camunda-bpmn-model.version>7.13.0-alpha2</camunda-bpmn-model.version>
        <camunda-bpm-mail-core.version>1.2.0</camunda-bpm-mail-core.version>
        <camunda-connect-core.version>1.3.0</camunda-connect-core.version>
        <camunda-engine-dmn-bom.version>7.13.0-alpha2</camunda-engine-dmn-bom.version>

    </properties>

</project>